# roda-ledger

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Design.md  Dockerfile  README.md  book.toml  build.rs  config.toml  control.Dockerfile  docker-compose.cluster.yml  docker-compose.control.yml  docker-compose.yml
crates/client/: Cargo.toml
crates/client/src/: cluster_client.rs  lib.rs  node_client.rs
crates/cluster/: Cargo.toml
crates/cluster-test-utils/: Cargo.toml
crates/cluster-test-utils/src/: lib.rs
crates/cluster-test-utils/src/testing/: mod.rs
crates/cluster/src/: bottleneck.rs  cluster_commit.rs  cluster_mirror.rs  command.rs  config.rs  consensus.rs  durable.rs  entry.rs  ledger_handler.rs  ledger_slot.rs  lib.rs  lifecycle.rs  main.rs  mapping.rs  node.rs  node_handler.rs  raft_driver.rs  raft_loop.rs  replication.rs  runner.rs  server.rs  supervisor.rs
crates/cluster/src/consensus/: consensus.rs  durable.rs  election.rs  mod.rs  replication.rs  replication_driver.rs  state.rs
crates/cluster/src/fault/: mod.rs
crates/cluster/src/handlers/: fault_handler.rs  latency_handler.rs  ledger_handler.rs  mod.rs  node_handler.rs
crates/cluster/src/raft/: candidate.rs  leader.rs  mod.rs  peer_replication.rs  quorum.rs  role_flag.rs  term.rs  vote.rs
crates/cluster/src/testing/: mod.rs
crates/cluster/src/waiter/: index_watch.rs  mod.rs  wait_for_transaction_level.rs
crates/cluster/tests/: append_entries_prev_check_test.rs  basic_test.rs  client_test.rs  cluster_client_test.rs  config_test.rs  correctness_test.rs  divergence_extended_test.rs  divergence_reseed_test.rs  edge_case_test.rs  election_extended_test.rs  election_test.rs  fault_test.rs  get_terms_test.rs  grpc_test.rs  idle_cpu_test.rs  latency_probe_test.rs  lifecycle_test.rs  log_test.rs  quorum_cluster_test.rs  replication_extended_test.rs  role_transition_test.rs  safety_test.rs  standalone_test.rs  sync_submit_test.rs  term_behavior_test.rs  wait_level_extended_test.rs  wasm_kv_cluster_test.rs
crates/control/: Cargo.toml  start.sh
crates/control/src/: background.rs  cluster_handle.rs  event_store.rs  ledger_proxy.rs  lib.rs  main.rs  server.rs  service.rs  state.rs
crates/control/src/provisioner/: mod.rs  process.rs
crates/control/src/runner/: metrics.rs  mod.rs  provisioner.rs
crates/control/src/scenario/: mod.rs  sim.rs  step.rs  types.rs
crates/control/src/scenarios/: e2e.rs  load.rs  matrix_grid.rs  mod.rs
crates/control/tests/: control_faults.rs  control_ledger_proxy.rs  control_monitoring.rs  control_provisioning.rs  control_scenarios.rs  process_provisioner_smoke.rs  scenarios_catalogue.rs
crates/control/tests/common/: mod.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: json.rs  lib.rs  main.rs  pack.rs  seal.rs  unpack.rs  verify.rs
crates/ctl/tests/: roda_ctl_test.rs
crates/ledger/: Cargo.toml
crates/ledger/benches/: array_queue_bench.rs  crc32_bench.rs  kv_bench.rs  ringbuf_bench.rs  simple_ringbuf_bench.rs  simple_spmc_bench.rs  snapshot_bench.rs  transaction_runner_bench.rs  transaction_runner_bench_wasm.rs  transactor_bench.rs  transactor_computer_bench.rs  tx_ring_bench.rs  wal_bench.rs  wal_tail_bench.rs
crates/ledger/src/: balance.rs  config.rs  dedup.rs  fault.rs  index.rs  ledger.rs  lib.rs  pipeline.rs  recover.rs  seal.rs  sequencer.rs  snapshot.rs  test_support.rs  transaction.rs  transactor.rs  transactor_computer.rs  wait_strategy.rs  wal.rs  wasm_runtime.rs
crates/ledger/src/transactor/: computer.rs  kv.rs  mod.rs  runner.rs  transaction.rs  transactor.rs  wasm_runtime.rs
crates/ledger/src/tx_ring/: README.md  mod.rs  reader.rs  releaser.rs  ring.rs  tests.rs  writer.rs
crates/ledger/tests/: account_history_test.rs  accounting_invariants_test.rs  backpressure_test.rs  balance_snapshot_test.rs  boundary_edge_cases_test.rs  concurrent_stress_test.rs  corruption_tests.rs  crash_injection_test.rs  crash_recovery_test.rs  dedup_link_test.rs  exact_segment_rotation_test.rs  fault_tests.rs  idempotency_test.rs  manual_replication_test.rs  million_transactions_test.rs  new_term_test.rs  open_account_test.rs  query_block_test.rs  query_cold_path_test.rs  query_hot_path_test.rs  recovery_until_test.rs  replay_test.rs  sealing_test.rs  segment_rotation_under_load_test.rs  snapshot_race_test.rs  snapshot_test.rs  surface_test.rs  tail_partial_recovery_test.rs  wal_only_source_of_truth_test.rs  wal_replay_equivalence_test.rs  wal_segmentation_test.rs  wasm_kv_billing_test.rs  wasm_kv_test.rs  wasm_linked_account_test.rs  wasm_registry_test.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: control.proto  fault.proto  latency.proto  ledger.proto  node.proto
crates/proto/src/: lib.rs
crates/raft/: Cargo.toml
crates/raft/src/: action.rs  candidate.rs  consensus.rs  event.rs  follower.rs  leader.rs  lib.rs  log_entry.rs  node.rs  persistence.rs  quorum.rs  replication.rs  request_vote.rs  role.rs  term.rs  timer.rs  types.rs  vote.rs
crates/raft/tests/: crash_partition.rs  delivery_faults.rs  error_handling.rs  multi_node.rs  regressions.rs  safety_properties.rs  scenarios.md  simulator.rs  single_node.rs  state_machine.rs  stress.rs
crates/raft/tests/common/: mem_persistence.rs  mod.rs
crates/roda-wasm-abi/: Cargo.toml  README.md
crates/roda-wasm-abi/examples/counter/: Cargo.toml
crates/roda-wasm-abi/examples/transfer/: Cargo.toml
crates/roda-wasm-abi/src/: account.rs  ffi.rs  kv.rs  lib.rs  status.rs  tools.rs
crates/roda-wasm-abi/tests/: compile.rs
crates/storage/: Cargo.toml
crates/storage/benches/: wal_scan_bench.rs  wal_tail_bench.rs
crates/storage/src/: config.rs  constants.rs  engine.rs  entities.rs  entries.rs  fault.rs  function_snapshot.rs  index.rs  kv.rs  layout.rs  lib.rs  segment.rs  snapshot.rs  syncer.rs  term.rs  truncate.rs  vote.rs  wal_reader.rs  wal_scan.rs  wal_serializer.rs  wal_tail.rs  wal_zero_copy.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/testing/src/e2e/: backend.rs  backend_inline.rs  backend_process.rs  context.rs  correctness.rs  crash.rs  macros.rs  mod.rs  (+3 more)
(+493 files in other folders)
