[package]
name = "roda-ledger"
version = "0.1.0"
edition = "2024"
description = "A zero-copy, lock-free multi-threaded stage engine for ultra-low latency pipelines."
authors = ["Taleh Ibrahimli"]
repository = "https://github.com/tislib/roda-ledger"
license = "Apache-2.0"
keywords = ["lock-free", "ledger", "concurrency", "pipeline", "low-latency"]
categories = ["concurrency", "data-structures", "ledger"]

[dependencies]
crossbeam-queue = "0.3.12"
crossbeam-skiplist = "0.1"
bytemuck = { version = "1.21.0", features = ["derive"] }
arc-swap = "1"
tokio = { version = "1.43.0", features = ["full"] }
sysinfo = "0.33.1"
roda-latency-tracker = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
smallvec = { version = "1.13", features = ["serde"] }
bitflags = { version = "2.8", features = ["serde"] }
tonic = { version = "0.12", features = ["transport"], optional = true }
prost = { version = "0.13", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
grpc = ["dep:tonic", "dep:prost", "dep:tonic-build"]

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[[bench]]
name = "wallet_bench"
harness = false

[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "transactor_bench"
harness = false

[[bench]]
name = "snapshot_bench"
harness = false

[[bench]]
name = "grpc_bench"
harness = false
required-features = ["grpc"]

[[bin]]
name = "roda-ledger"
path = "src/bin/server.rs"
required-features = ["grpc"]
