[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/storage",
    "crates/ledger",
    "crates/raft",
    "crates/client",
    "crates/cluster",
    "crates/cluster-test-utils",
    "crates/control",
    "crates/ctl",
    "crates/testing",
]

# `cargo run` / `cargo build` from the root act on cluster (which produces the binary).
default-members = ["crates/cluster"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Taleh"]
license = "Apache-2.0"
repository = "https://github.com/yourname/roda-ledger"
rust-version = "1.85"

[workspace.dependencies]
# --- async runtime / RPC ---
tokio = { version = "1.40", features = ["full"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# --- concurrency primitives ---
arc-swap = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"

# --- serialization / config ---
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# --- logging ---
spdlog-rs = "0.4"

# --- error handling ---
thiserror = "1"
anyhow = "1"

# --- utilities ---
rand = "0.8"
bytes = "1.7"

# --- CLI parsing (for the binary) ---
clap = { version = "4", features = ["derive"] }

# --- test / bench ---
tempfile = "3"
proptest = "1.5"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

# --- internal crates ---
proto = { path = "crates/proto" }
storage = { path = "crates/storage" }
ledger = { path = "crates/ledger" }
raft = { path = "crates/raft" }
client = { path = "crates/client" }
cluster = { path = "crates/cluster" }
cluster-test-utils = { path = "crates/cluster-test-utils" }
control = { path = "crates/control" }
ctl = { path = "crates/ctl" }
testing = { path = "crates/testing" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1                       # frame pointers for samply/perf

[profile.bench]
inherits = "release"
lto = "fat"
codegen-units = 1

# Profile for the deterministic raft simulator: optimized enough to run 10K
# schedules without being slow, but with debug assertions on to catch invariant
# violations during fault injection.
[profile.sim]
inherits = "release"
debug = 2
debug-assertions = true
overflow-checks = true

# Profile used by CI: compiles much faster than release while keeping
# debug-assertions on for stronger test signal. opt-level = 1 is enough
# for tests to run quickly without paying for full optimization.
[profile.ci]
inherits = "dev"
opt-level = 1
debug = 0
incremental = false
codegen-units = 256
lto = false