[package]
name = "cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "cluster"
path = "src/lib.rs"

[[bin]]
name = "roda-server"
path = "src/main.rs"

[features]
default = []
# Enables the `Fault` gRPC service on this node's node-port and the
# `ClusterFaultInjector` it backs onto. Transitively enables
# `ledger/fault-injection` and `storage/fault-injection` so the
# disk-affecting buckets (DISK_ACCESS, WAL_ACCESS) reach the storage
# layer's hooks. Production builds compile this surface out
# entirely. See ADR-018.
fault-injection = ["ledger/fault-injection"]

[dependencies]
proto.workspace = true
storage.workspace = true
ledger.workspace = true
raft.workspace = true
client.workspace = true

tokio.workspace = true
tonic.workspace = true
tonic-reflection = "0.12"
prost.workspace = true

serde.workspace = true
toml.workspace = true
spdlog-rs.workspace = true
arc-swap.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
tempfile.workspace = true

# Binary-only deps. They could be split out with feature flags but the win
# is too small to be worth the complexity.
clap.workspace = true
log = "0.4.29"
tokio-util = "0.7.18"
tokio-stream = "0.1"
signal-hook = "0.3"

[dev-dependencies]
proto.workspace = true
storage.workspace = true
tokio-test.workspace = true
proptest.workspace = true
criterion.workspace = true
# Guest-side ABI + `compile_to_wasm`: the KV-over-cluster test writes its modules
# in Rust and compiles them to wasm.
roda-wasm-abi = { path = "../roda-wasm-abi", features = ["tools"] }
