[package]
name = "control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
proto.workspace = true
tonic.workspace = true
tonic-web = "0.12"
tonic-reflection = "0.12"
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
parking_lot.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
