[package]
name = "ctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[main]
path = "src/main.rs"

[dependencies]
cluster.workspace = true
ledger.workspace = true
storage.workspace = true
proto.workspace = true
bytemuck = { version = "1.21.0", features = ["derive"] }
crc32c = "0.6"
lz4_flex = "0.11"

tokio.workspace = true
tonic.workspace = true
spdlog-rs.workspace = true
tempfile.workspace = true
arc-swap.workspace = true
rand.workspace = true
anyhow.workspace = true