[package]
name = "ctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "roda-ctl"
path = "src/main.rs"

[dependencies]
storage.workspace = true
bytemuck = { version = "1.21.0", features = ["derive"] }
crc32c = "0.6"
lz4_flex = "0.11"
serde_json = "1"
clap.workspace = true
tempfile.workspace = true
