[package]
name = "ledger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
# Enables `LedgerFaultInjector` (ledger::fault) and the
# `Ledger::fault_injector()` accessor. Transitively enables
# `storage/fault-injection`. See ADR-018.
fault-injection = ["storage/fault-injection"]

[dependencies]
storage.workspace = true
rand = "0.8"
rustc-hash = "2"
crossbeam-queue = "0.3.12"
crossbeam-skiplist = "0.1"
crossbeam-utils = "0.8"

serde.workspace = true
spdlog-rs.workspace = true
arc-swap.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
thiserror.workspace = true
bytes.workspace = true
tokio.workspace = true
bytemuck = { version = "1.21.0", features = ["derive"] }
crc32c = "0.6"
wasmtime = { version = "26", default-features = false, features = ["cranelift", "runtime"] }
wat = "1"
clap = { version = "4.5.60", features = ["derive"] }
roda-latency-tracker.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
criterion.workspace = true
ringbuf = "0.4"                 # experimental: SPSC ring-buffer throughput bench

[[bench]]
name = "transactor_bench"
harness = false

[[bench]]
name = "crc32_bench"
harness = false

[[bench]]
name = "transaction_runner_bench"
harness = false

[[bench]]
name = "transaction_runner_bench_wasm"
harness = false

[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "snapshot_bench"
harness = false

[[bench]]
name = "ringbuf_bench"
harness = false

[[bench]]
name = "array_queue_bench"
harness = false

[[bench]]
name = "simple_ringbuf_bench"
harness = false

[[bench]]
name = "simple_spmc_bench"
harness = false

[[bench]]
name = "tx_ring_bench"
harness = false
