[package]
name = "raft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

# DELIBERATE CONSTRAINT: this dependency list is the architectural boundary.
# - No tokio / async runtime. raft is a pure state machine.
# - No tonic / proto. Wire types are translated by the cluster crate.
# - No ledger / cluster. Upward dependencies break the layer.
# If you're tempted to add any of these, return an Action variant instead.
[dependencies]
storage.workspace = true         # term log, vote log, raft-owned durable state

serde.workspace = true
spdlog-rs.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
rand.workspace = true            # seeded RNG for the deterministic simulator
criterion.workspace = true