[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
# Enables the `SyncFault` hook in `Syncer::sync` and related test
# seams. Gated so production builds compile out the hook entirely.
# See ADR-018.
fault-injection = []

[dependencies]
serde.workspace = true
spdlog-rs.workspace = true
thiserror.workspace = true
bytes.workspace = true
crossbeam.workspace = true       # if you use crossbeam channels in WAL pipeline; drop if not
bytemuck = { version = "1.21.0", features = ["derive"] }
crc32c = "0.6"
lz4_flex = "0.11"

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "wal_tail_bench"
harness = false