[package]
name = "testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
autobins = false

[lib]
name = "testing"
path = "src/lib.rs"

[[bin]]
name = "e2e"
path = "src/bin/e2e.rs"
required-features = ["harness"]

[[bin]]
name = "e2e-cluster-process"
path = "src/bin/e2e_cluster_process.rs"
required-features = ["harness"]

[features]
default = []
# Pulls in everything the legacy `e2e` harness needs to spin up
# clusters and run libtest-mimic trials. The scenario primitives and
# catalogue do not need any of this — `control` depends on this crate
# without enabling `harness` so it doesn't inherit cluster-spawning code.
harness = [
  "dep:proto",
  "dep:storage",
  "dep:ledger",
  "dep:client",
  "dep:cluster",
  "dep:cluster-test-utils",
  "dep:tokio",
  "dep:tonic",
  "dep:serde",
  "dep:toml",
  "dep:spdlog-rs",
  "dep:rand",
  "dep:wat",
  "dep:libtest-mimic",
]

[dependencies]
# Always-on. Scenario primitives and catalogue keep this list minimal.
anyhow.workspace = true

# Harness-only: optional behind the `harness` feature.
proto              = { workspace = true, optional = true }
storage            = { workspace = true, optional = true }
ledger             = { workspace = true, optional = true }
client             = { workspace = true, optional = true }
cluster            = { workspace = true, optional = true }
cluster-test-utils = { workspace = true, optional = true }
tokio              = { workspace = true, optional = true }
tonic              = { workspace = true, optional = true }
serde              = { workspace = true, optional = true }
toml               = { workspace = true, optional = true }
spdlog-rs          = { workspace = true, optional = true }
rand               = { workspace = true, optional = true }
wat                = { version = "1", optional = true }
libtest-mimic      = { version = "0.7", optional = true }
