[package]
name = "testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
autobins = false

[lib]
name = "testing"
path = "src/lib.rs"

[features]
default = []

[dependencies]
# Scenario primitives and catalogue only — no cluster-spawning code.
anyhow.workspace = true
